<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".Tracker">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtrmvLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/RmvElement" />

        <EditText
            android:id="@+id/rmvElement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtrmvLetter"
            android:layout_toRightOf="@+id/txtrmvLetter"
            android:layout_toEndOf="@+id/txtrmvLetter"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:inputType="textCapCharacters"
            android:autofillHints=""
            android:maxLength="1"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnReset"
            android:layout_alignBaseline="@+id/txtrmvLetter"
            android:layout_toStartOf="@+id/btnReset"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/btnRemove"
            tools:ignore="RelativeOverlap"
            android:onClick="rmvElement"/>

        <ImageButton
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_button"
            android:contentDescription="@string/descbtnReset"
            android:onClick="resetGame"
            android:src="@drawable/looper_white"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

    </LinearLayout>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_primary"
        android:baselineAligned="false"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/col1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/col2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/col3"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />


</TableLayout>


